--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,6 +7,9 @@
     android:background="@color/background_dark">
 
     <!-- Logo/Icon -->
+
+    <!-- App Name -->
+
     <ImageView
         android:id="@+id/iv_logo"
         android:layout_width="150dp"
@@ -19,7 +22,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed" />
 
-    <!-- App Name -->
     <TextView
         android:id="@+id/tv_app_name"
         android:layout_width="wrap_content"
@@ -30,7 +32,7 @@
         android:textColor="@color/text_primary"
         android:textSize="32sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/progress_bar"
+        app:layout_constraintBottom_toTopOf="@+id/lottie_animation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_logo" />
