--- a/app/src/main/res/layout/layout/fragment_search.xml
+++ b/app/src/main/res/layout/layout/fragment_search.xml
@@ -227,20 +227,9 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/trending_now"
+                    android:text="Result"
                     android:textColor="@color/text_primary"
                     android:textSize="18sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/tv_see_all"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:text="@string/see_all"
-                    android:textColor="@color/primary_color"
-                    android:textSize="14sp"
                     android:textStyle="bold" />
 
             </LinearLayout>
