--- a/app/src/main/res/layout/layout/item_category.xml
+++ b/app/src/main/res/layout/layout/item_category.xml
@@ -2,24 +2,24 @@
 <androidx.cardview.widget.CardView 
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="@dimen/category_icon_size"
-    android:layout_height="wrap_content"
+    android:layout_width="100dp"
+    android:layout_height="100dp"
     android:layout_marginEnd="@dimen/spacing_medium"
     app:cardBackgroundColor="@color/surface_dark"
-    app:cardCornerRadius="@dimen/corner_radius_medium"
+    app:cardCornerRadius="@dimen/corner_radius_default"
     app:cardElevation="@dimen/card_elevation">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="@dimen/spacing_small">
 
         <!-- Category Icon in a rounded container -->
         <androidx.cardview.widget.CardView
-            android:layout_width="@dimen/icon_size_xl"
-            android:layout_height="@dimen/icon_size_xl"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
             app:cardBackgroundColor="@color/surface_dark_elevated"
             app:cardCornerRadius="@dimen/corner_radius_default"
             app:cardElevation="0dp">
@@ -29,7 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:contentDescription="@string/category_image"
-                android:padding="@dimen/spacing_small"
+                android:padding="6dp"
                 android:scaleType="centerCrop" />
         </androidx.cardview.widget.CardView>
 
