--- a/app/src/main/res/drawable/bg_border_dashed.xml
+++ b/app/src/main/res/drawable/bg_border_dashed.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <stroke
         android:width="1dp"
-        android:color="@color/text_hint"
+        android:color="@color/border_dashed"
         android:dashWidth="4dp"
         android:dashGap="4dp" />
     <corners android:radius="@dimen/corner_radius_medium" />
