--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -73,16 +73,17 @@
                     android:src="@drawable/ic_search"
                     app:tint="@color/text_secondary" />
 
-                <EditText
+                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                     android:id="@+id/et_search"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginStart="@dimen/spacing_small"
                     android:layout_weight="1"
                     android:background="@android:color/transparent"
+                    android:completionThreshold="1"
                     android:hint="@string/find_meals"
                     android:imeOptions="actionSearch"
-                    android:inputType="text"
+                    android:inputType="text|textAutoComplete"
                     android:maxLines="1"
                     android:textColor="@color/text_primary"
                     android:textColorHint="@color/text_hint"
@@ -226,20 +227,9 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/trending_now"
+                    android:text="Result"
                     android:textColor="@color/text_primary"
                     android:textSize="18sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/tv_see_all"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:text="@string/see_all"
-                    android:textColor="@color/primary_color"
-                    android:textSize="14sp"
                     android:textStyle="bold" />
 
             </LinearLayout>
